# truckout-toown

./: README.md  pyproject.toml
truckout_toown/: hooks.py  modules.txt
truckout_toown/truckout_toown/doctype/truckout_setting/: test_truckout_setting.py  truckout_setting.js  truckout_setting.json  truckout_setting.py
truckout_toown/truckout_toown/doctype/vanout/: test_vanout.py  vanout.js  vanout.json  vanout.py
truckout_toown/truckout_toown/doctype/vanout_details/: vanout_details.json  vanout_details.py
truckout_toown/utils/: vrapp.py
